stroke of coordinates and function changed.